src/objects/Offer_Definition__c.object
<CustomObject>
    <fields>
        <fullName>Campaign_Project__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Campaign Project</description>
        <inlineHelpText>Campaign Project</inlineHelpText>
        <label>Campaign Project</label>
        <referenceTo>Campaign_Project__c</referenceTo>
        <relationshipLabel>Offer Definitions</relationshipLabel>
        <relationshipName>Offer_Definitions</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Description__c</fullName>
        <description>Offer Description</description>
        <inlineHelpText>Offer Description</inlineHelpText>
        <label>Offer Description</label>
        <length>500</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Max_Choice__c</fullName>
        <formula>CASE( text(Offer_Definition_Type__c) , &apos;Choice&apos;, 1,  Offer_Incentive_Group_Count__c +   NULLVALUE(Offer_Incentive_Count__c, 0) )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Max Choice</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Offer_Definition_Type__c</fullName>
        <label>Offer Definition Type</label>
        <picklist>
            <picklistValues>
                <fullName>Choice</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Package</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Offer_Employee_Description__c</fullName>
        <description>Information to help the Employee understand the terms and conditions for the Package.</description>
        <inlineHelpText>Information to help the Employee understand the terms and conditions for the Package.</inlineHelpText>
        <label>Offer Employee Description</label>
        <length>500</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Offer_Guest_Label__c</fullName>
        <description>Offer Guest Label</description>
        <inlineHelpText>Offer Label is seen by the Guest. E.g. &quot;Join us for Summer Fun!&quot;</inlineHelpText>
        <label>Offer Guest Label</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Offer_Id__c</fullName>
        <description>Offer Id - system generated , 6 char base 30 alphanumeric number</description>
        <externalId>true</externalId>
        <inlineHelpText>System Generated Offer Number</inlineHelpText>
        <label>Offer Id</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Offer_Incentive_Count__c</fullName>
        <defaultValue>0</defaultValue>
        <description>Offer Incentive Group Count</description>
        <inlineHelpText>Offer Incentive Group Count</inlineHelpText>
        <label>Offer Incentive Count</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Offer_Incentive_Group_Count__c</fullName>
        <description>Offer Incentive Group Count</description>
        <inlineHelpText>Offer Incentive Group Count</inlineHelpText>
        <label>Offer Incentive Group Count</label>
        <summaryForeignKey>Offer_Incentive_Group__c.Offer_Definition__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Offer_Intent__c</fullName>
        <description>Offer Intent</description>
        <inlineHelpText>Offer Intent</inlineHelpText>
        <label>Offer Intent</label>
        <picklist>
            <picklistValues>
                <fullName>BOUNCE BACK</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>HOTEL</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>NEW BUSINESS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SPECIAL EVENTS</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <label>Offer Definition</label>
    <nameField>
        <displayFormat>OD-{000000000}</displayFormat>
        <label>Offer Definition Record Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Offer Definitions</pluralLabel>
    <recordTypes>
        <fullName>Choice</fullName>
        <active>true</active>
        <description>Choice Offer is also known as &apos;OR&apos; Offer. For example, Three free room night  OR  $50 casino play</description>
        <label>Choice</label>
    </recordTypes>
    <recordTypes>
        <fullName>Package</fullName>
        <active>true</active>
        <description>Package offer has multiple offer incentives. For example Three free room night  AND $50 casino play AND $50 F&amp;B credit</description>
        <label>Package</label>
    </recordTypes>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>